--- a/bio/index.html
+++ b/bio/index.html
@@ -4,10 +4,11 @@ title: Bio
 ---
 
 <h1>{{ page.title }}</h1>
-<!--<blockquote>-->
+<blockquote>
 <p>Tenor Miles Herr, from Lenox, Massachusetts, is a graduate of the Maryland Opera Studio.  His recent credits include Ferrando (Così fan tutte) and Le Remendado (Carmen) with Fargo-Moorhead Opera, Bardolfo (Falstaff) with Crested Butte Music Festival, Stevie and Professor Scoot (The Cradle will Rock) with Opera Saratoga, and Pluton and Orphée (Orphée aux Enfers) with the Marlyand Opera Studio.</p>
-<!--</blockquote>
-<blockquote>-->
+</blockquote>
+<blockquote>
 <p>Mr. Herr is an alumnus of young artist programs at Fargo-Moorhead Opera, Crested Butte Opera Studio, and Opera Saratoga.  He has performed on master classes with many accomplished artists and teachers including Marlena Malas, Anthony Dean Griffey, and Angela Brown. Mr. Herr currently studies with Gran Wilson.</p>
-<!--</blockquote>-->
-  {{ content }}
+</blockquote>
+
+{{ content }}
