--- a/bio/index.html
+++ b/bio/index.html
@@ -13,4 +13,4 @@ During the 2016-2017 season, Mr. Herr sang the roles of Stevie and Professor Sco
 <blockquote>
 <p style="text-align:left;">Mr. Herr is an alumnus of young artist programs such as The Gate City Bank Young Artist Program with Fargo-Moorhead Opera, The Crested Butte Opera Studio, and Opera Saratoga.  He has performed on master classes with many accomplished artists and teachers including Marlena Malas, Anthony Dean Griffey, and Angela Brown. Mr. Herr currently studies with Gran Wilson.</p>
 </blockquote>
-<p style="text-align:left;"> A full performance resume can be found here!</p>
+<p style="text-align:left;"> A full performance resume can be found <a href="/photos/Resume.pdf" download>here!</a></p>
