--- a/bio/index.html
+++ b/bio/index.html
@@ -14,6 +14,6 @@ and Gastone (<em>La Traviata</em>) with Ash Lawn Opera.
 <br>
 Mr. Herr is an alumnus of young artist programs such as The Gate City Bank Young Artist Program with Fargo-Moorhead Opera, 
 The Crested Butte Opera Studio, and Opera Saratoga.  He has performed on master classes with many accomplished artists and 
-teachers including Marlena Malas, Anthony Dean Griffey, and Angela Brown. Mr. Herr currently studies with Gran Wilson.</p>
+teachers including Marlena Malas, Anthony Dean Griffey, and Angela Brown. Mr. Herr currently studies with Gran Wilson.
 <br>
-A full performance resume can be found <a href="/photos/Resume.pdf" download>here!</a></p>
+A full performance resume can be found <a href="/photos/Resume.pdf" download>here</a>!</p>
