--- a/bio/index.html
+++ b/bio/index.html
@@ -4,7 +4,7 @@ title: Bio
 ---
 
 <h1>{{ page.title }}</h1>
-<p style="text-align:left; font-family: 'Palatino', 'Helvetica', 'Arial';">Tenor Miles Herr, from Lenox, Massachusetts, is a graduate of the Maryland Opera Studio.  
+<p style="text-align:left;">Tenor Miles Herr, from Lenox, Massachusetts, is a graduate of the Maryland Opera Studio.  
 The 2018-2019 season saw him perform the roles of Ferrando (<em>Così fan tutte</em>) and Le Remendado (<em>Carmen</em>) with 
 Fargo-Moorhead Opera and Bardolfo (<em>Falstaff</em>) with Crested Butte Music Festival
 <br>
