--- a/bio/index.html
+++ b/bio/index.html
@@ -6,16 +6,16 @@ title: Bio
 <h1>{{ page.title }}</h1>
 <p style="text-align:left;">Tenor Miles Herr, from Lenox, Massachusetts, is a graduate of the Maryland Opera Studio.  
 The 2018-2019 season saw him perform the roles of Ferrando (<em>Così fan tutte</em>) and Le Remendado (<em>Carmen</em>) with 
-Fargo-Moorhead Opera and Bardolfo (<em>Falstaff</em>) with Crested Butte Music Festival
+Fargo-Moorhead Opera as well as Bardolfo (<em>Falstaff</em>) with the Crested Butte Music Festival.
 <br>
 <br>
 During the 2016-2017 season, Mr. Herr sang the roles of Stevie and Professor Scoot (<em>The Cradle will Rock</em>) with Opera Saratoga, 
-Pluton and Orphée (<em>Orphée aux Enfers</em>), Male Chorus (<em>The Rape of Lucretia</em>) with the Marlyand Opera Studio, 
+Pluton and Orphée (<em>Orphée aux Enfers</em>) and Male Chorus (<em>The Rape of Lucretia</em>) with the Marlyand Opera Studio, 
 and Gastone (<em>La Traviata</em>) with Ash Lawn Opera.
 <br>
 <br>
 Mr. Herr is an alumnus of young artist programs such as The Gate City Bank Young Artist Program with Fargo-Moorhead Opera, 
-The Crested Butte Opera Studio, and Opera Saratoga.  He has performed on master classes with many accomplished artists and 
+the Crested Butte Opera Studio, and Opera Saratoga.  He has performed on master classes with many accomplished artists and 
 teachers including Marlena Malas, Anthony Dean Griffey, and Angela Brown. Mr. Herr currently studies with Gran Wilson.
 <br>
 <br>
