--- a/bio/index.html
+++ b/bio/index.html
@@ -5,18 +5,23 @@ title: Bio
 
 <h1>{{ page.title }}</h1>
 <p style="text-align:left;">Tenor Miles Herr, from Lenox, Massachusetts, is a graduate of the Maryland Opera Studio.  
-The 2018-2019 season saw him perform the roles of Ferrando (<em>Così fan tutte</em>) and Le Remendado (<em>Carmen</em>) with 
-Fargo-Moorhead Opera and Bardolfo (<em>Falstaff</em>) with Crested Butte Music Festival
+His operatic credits include Ferrando (<em>Così fan tutte</em>) and Le Remendado (<em>Carmen</em>) with 
+Fargo-Moorhead Opera and Bardolfo (<em>Falstaff</em>) with Crested Butte Music Festival, Stevie and Professor 
+Scoot (<em>The Cradle will Rock</em>) with Opera Saratoga, Pluton and Orphée (<em>Orphée aux Enfers</em>), 
+Male Chorus (<em>The Rape of Lucretia</em>) with the Marlyand Opera Studio, and Gastone (<em>La Traviata</em>) with Ash 
+Lawn Opera. In addition to his operatic credits, Mr. Herr also took part in two consecutive iterations of the annual 
+New Work Reading while a member of the Maryland Opera Studio where he premiered two new operatic works: <em>The Young King</em> 
+and <em>Another Country</em>. 
 <br>
 <br>
-During the 2016-2017 season, Mr. Herr sang the roles of Stevie and Professor Scoot (<em>The Cradle will Rock</em>) with Opera Saratoga, 
-Pluton and Orphée (<em>Orphée aux Enfers</em>), Male Chorus (<em>The Rape of Lucretia</em>) with the Marlyand Opera Studio, 
-and Gastone (<em>La Traviata</em>) with Ash Lawn Opera.
+As a concert soloist, Mr. Herr has performed Handel’s Messiah with a number of groups, including Calvary Baptist Church 
+(Washington, D.C.), The Cary Community Choir, and Chapel Hill University Baptist Church.  He also performed a pair of 
+concerts with the UNC Baroque Ensemble under the bow of Dr. Brent Wissick. 
 <br>
 <br>
-Mr. Herr is an alumnus of young artist programs such as The Gate City Bank Young Artist Program with Fargo-Moorhead Opera, 
-The Crested Butte Opera Studio, and Opera Saratoga.  He has performed on master classes with many accomplished artists and 
-teachers including Marlena Malas, Anthony Dean Griffey, and Angela Brown. Mr. Herr currently studies with Gran Wilson.
+Miles is an alumnus of young artist programs at Fargo-Moorhead Opera, The Crested Butte Opera Studio, and Opera Saratoga.  
+He has performed on master classes with many accomplished artists and teachers including Marlena Malas, Anthony Dean Griffey, 
+and Angela Brown. Mr. Herr currently studies with Gran Wilson.
 <br>
 <br>
 A full performance resume can be found <a href="/photos/Resume.pdf" download>here</a>!</p>
