--- a/bio/index.html
+++ b/bio/index.html
@@ -11,7 +11,7 @@ Scoot (<em>The Cradle will Rock</em>) with Opera Saratoga, Pluton and Orphée (<
 Male Chorus (<em>The Rape of Lucretia</em>) with the Marlyand Opera Studio, and Gastone (<em>La Traviata</em>) with Ash 
 Lawn Opera. In addition to his operatic credits, Mr. Herr also took part in two consecutive iterations of the annual 
 New Work Reading while a member of the Maryland Opera Studio where he premiered two new operatic works: <em>The Young King</em> 
-and <em>Another Country</em>. 
+by Martin Hennessy and <em>Another Country</em> by Michael Oberhauser. 
 <br>
 <br>
 As a concert soloist, Mr. Herr has performed Handel’s Messiah with a number of groups, including Calvary Baptist Church 
@@ -19,7 +19,7 @@ As a concert soloist, Mr. Herr has performed Handel’s Messiah with a number of
 concerts with the UNC Baroque Ensemble under the bow of Dr. Brent Wissick. 
 <br>
 <br>
-Miles is an alumnus of young artist programs at Fargo-Moorhead Opera, The Crested Butte Opera Studio, and Opera Saratoga.  
+Miles is an alumnus of young artist programs at Teatro Nuovo,  Fargo-Moorhead Opera, The Crested Butte Opera Studio, and Opera Saratoga.  
 He has performed on master classes with many accomplished artists and teachers including Marlena Malas, Anthony Dean Griffey, 
 and Angela Brown. Mr. Herr currently studies with Gran Wilson.
 <br>
