--- a/bio/index.html
+++ b/bio/index.html
@@ -9,9 +9,9 @@ His operatic credits include Ferrando (<em>Così fan tutte</em>) and Le Remendad
 Fargo-Moorhead Opera and Bardolfo (<em>Falstaff</em>) with Crested Butte Music Festival, Stevie and Professor 
 Scoot (<em>The Cradle will Rock</em>) with Opera Saratoga, Pluton and Orphée (<em>Orphée aux Enfers</em>), 
 Male Chorus (<em>The Rape of Lucretia</em>) with the Marlyand Opera Studio, and Gastone (<em>La Traviata</em>) with Ash 
-Lawn Opera. In addition to his operatic credits, Mr. Herr also took part in two consecutive iterations of the annual 
-New Work Reading while a member of the Maryland Opera Studio where he premiered two new operatic works: <em>The Young King</em> 
-by Martin Hennessy and <em>Another Country</em> by Michael Oberhauser. 
+Lawn Opera. While a member of the Maryland Opera Studio, Mr. Herr took part in two consecutive iterations of the annual New 
+Work Reading where he premiered two new operatic works: <em>The Young King</em> by Martin Hennessy and 
+<em>Another Country</em> by Michael Oberhauser. 
 <br>
 <br>
 As a concert soloist, Mr. Herr has performed Handel’s Messiah with a number of groups, including Calvary Baptist Church 
