--- a/bio/index.html
+++ b/bio/index.html
@@ -4,7 +4,7 @@ title: Bio
 ---
 
 <h1>{{ page.title }}</h1>
-<p style="text-align:left;">Tenor Miles Herr, from Lenox, Massachusetts, is a graduate of the Maryland Opera Studio.  
+<p style="text-align:left;margin:10px;">Tenor Miles Herr, from Lenox, Massachusetts, is a graduate of the Maryland Opera Studio.  
 His operatic credits include Ferrando (<em>Così fan tutte</em>) and Le Remendado (<em>Carmen</em>) with 
 Fargo-Moorhead Opera and Bardolfo (<em>Falstaff</em>) with Crested Butte Music Festival, Stevie and Professor 
 Scoot (<em>The Cradle will Rock</em>) with Opera Saratoga, Pluton and Orphée (<em>Orphée aux Enfers</em>), 
