--- a/bio/index.html
+++ b/bio/index.html
@@ -24,4 +24,4 @@ He has performed on master classes with many accomplished artists and teachers i
 and Angela Brown. Mr. Herr currently studies with Gran Wilson.
 <br>
 <br>
-A full performance resume can be found <a href="/photos/Resume.pdf" download style="font-size:1em">here</a>!</p>
+A full performance resume can be found <a href="/photos/Miles Herr Resume.pdf" download style="font-size:1em">here</a>!</p>
