--- a/bio/index.html
+++ b/bio/index.html
@@ -5,7 +5,7 @@ title: Bio
 
 <h1>{{ page.title }}</h1>
 <p style="text-align:left;margin:5%;">Tenor Miles Herr, from Lenox, Massachusetts, is a graduate of the Maryland Opera Studio.  
-His operatic credits include Ferrando (<em>Così fan tutte</em>) and Le Remendado (<em>Carmen</em>) with 
+His operatic credits include Ramiro (<em>La Cenerentola</em>), Ferrando (<em>Così fan tutte</em>), and Le Remendado (<em>Carmen</em>) with 
 Fargo-Moorhead Opera and Bardolfo (<em>Falstaff</em>) with Crested Butte Music Festival, Stevie and Professor 
 Scoot (<em>The Cradle will Rock</em>) with Opera Saratoga, Pluton and Orphée (<em>Orphée aux Enfers</em>), 
 Male Chorus (<em>The Rape of Lucretia</em>) with the Marlyand Opera Studio, and Gastone (<em>La Traviata</em>) with Ash 
@@ -19,7 +19,7 @@ As a concert soloist, Mr. Herr has performed Handel’s Messiah with a number of
 concerts with the UNC Baroque Ensemble under the bow of Dr. Brent Wissick. 
 <br>
 <br>
-Miles is an alumnus of young artist programs at Teatro Nuovo,  Fargo-Moorhead Opera, The Crested Butte Opera Studio, and Opera Saratoga.  
+Miles is an alumnus of young artist programs at Opera Delaware, Teatro Nuovo, Fargo-Moorhead Opera, Crested Butte Opera Studio, and Opera Saratoga.  
 He has performed on master classes with many accomplished artists and teachers including Marlena Malas, Anthony Dean Griffey, 
 and Angela Brown. Mr. Herr currently studies with Gran Wilson.
 <br>
