--- a/bio/index.html
+++ b/bio/index.html
@@ -21,13 +21,10 @@ Work Reading where he premiered two new operatic works: <em>The Young King</em> 
     <p style="text-align:left;margin:10%;">As a concert soloist, Mr. Herr has performed Handel’s Messiah with a number of groups, including Calvary Baptist Church 
 (Washington, D.C.), The Cary Community Choir, and Chapel Hill University Baptist Church.  He also performed a pair of 
       concerts with the UNC Baroque Ensemble under the bow of Dr. Brent Wissick.</p>
-<br>
-<p style="text-align:left;margin:10%;">Miles is an alumnus of young artist programs at Opera Delaware, Teatro Nuovo, Fargo-Moorhead Opera, Crested Butte Opera Studio, and Opera Saratoga.  
+    <p style="text-align:left;margin:10%;">Miles is an alumnus of young artist programs at Opera Delaware, Teatro Nuovo, Fargo-Moorhead Opera, Crested Butte Opera Studio, and Opera Saratoga.  
 He has performed on master classes with many accomplished artists and teachers including Marlena Malas, Anthony Dean Griffey, 
   and Angela Brown. Mr. Herr currently studies with Gran Wilson.</p>
-<br>
-<p style="text-align:left;margin:10%;">A full performance resume can be found <a href="/photos/Miles Herr Resume.pdf" download style="font-size:1em">here</a>!
-    </p>
+  <p style="text-align:left;margin:10%;">A full performance resume can be found <a href="/photos/Miles Herr Resume.pdf" download style="font-size:1em">here</a>!</p>
   </div>
 </div>
   
