--- a/bio/index.html
+++ b/bio/index.html
@@ -26,7 +26,7 @@ Work Reading where he premiered two new operatic works: <em>The Young King</em> 
 He has performed on master classes with many accomplished artists and teachers including Marlena Malas, Anthony Dean Griffey, 
   and Angela Brown. Mr. Herr currently studies with Gran Wilson.</p>
     
-  <p style="text-align:left;left;margin:2.5% 10% 2.5% 5%;">A full performance resume can be found <a href="/photos/Miles Herr Resume.pdf" download style="font-size:1em">here</a>!</p>
+  <p style="text-align:left;left;margin:2.5% 10% 2.5% 5%;">A full performance resume can be found <a href="/photos/Miles Herr Resume.pdf" download style="font-size:1em; color: blue;">here</a>!</p>
   </div>
 </div>
   
